# deepgboost

./: .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: dx.md  mathematician.md  python-programmer.md
.claude/skills/analysis/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/kaggle-search/: SKILL.md
.claude/skills/paper-search/: SKILL.md
.claude/skills/research/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  claude-on-demand.yml  claude-pr-review.yml  docs.yml  publish.yml
benchmark/: BITACORA.md  config.json  config_academic.json  run.py  run_experiments.py
benchmark/analysis/: config_hi_analysis.py
benchmark/data/: penguins.csv
benchmark/data/openml/: task_361055.npz  task_361060.npz  task_361062.npz  task_361063.npz  task_361065.npz  task_361066.npz  task_361070.npz  task_361072.npz  task_361073.npz  task_361074.npz  (+7 more)
benchmark/experiments/: __init__.py  abstract_test.py  bootstrap_test.py  classification_bootstrap_test.py  crossvalidation_test.py  synthetic_correlation_experiment.py  synthetic_test.py
benchmark/models/: __init__.py  abstract_model.py  boosted_forest.py  deepgboost_classifier_model.py  deepgboost_model.py  deepgboost_regressor_model.py  gradient_boosting_classifier_model.py  gradient_boosting_model.py  random_forest_classifier_model.py  random_forest_model.py  xgboost_classifier_model.py  xgboost_model.py
benchmark/results/: abalone_bootstrap_test.json  abalone_bootstrap_test.txt  abalone_bootstrap_test_scores.csv  abalone_bootstrap_test_scores.json  abalone_cross_validation_test.json  abalone_cross_validation_test_scores.json  adult_bootstrap_test.json  adult_bootstrap_test.txt  adult_bootstrap_test_scores.csv  adult_bootstrap_test_scores.json  adult_cross_validation_test.json  adult_cross_validation_test_scores.json  ailerons_cross_validation_test.json  ailerons_cross_validation_test_normalized.json  ailerons_cross_validation_test_scores.json  bank-marketing-openml_cross_validation_test.json  bank-marketing-openml_cross_validation_test_normalized.json  bank-marketing-openml_cross_validation_test_scores.json  bankmarketing_bootstrap_test.json  bankmarketing_bootstrap_test.txt  bankmarketing_bootstrap_test_scores.csv  bankmarketing_bootstrap_test_scores.json  bankmarketing_cross_validation_test.json  bankmarketing_cross_validation_test_scores.json  benchmark_summary.md  bikesales_bootstrap_test.json  bikesales_bootstrap_test.txt  bikesales_bootstrap_test_scores.csv  bikesales_bootstrap_test_scores.json  bikesales_cross_validation_test.json  bikesales_cross_validation_test_scores.json  californiahousing_bootstrap_test.json  californiahousing_bootstrap_test.txt  californiahousing_bootstrap_test_scores.csv  californiahousing_bootstrap_test_scores.json  californiahousing_cross_validation_test.json  californiahousing_cross_validation_test_scores.json  cargo2000_bootstrap_test.txt  cargo2000_bootstrap_test_scores.csv  concrete_bootstrap_test.json  (+67 more)
benchmark/tools/: __init__.py  academic_config_parser.py  academic_crossvalidation_test.py  academic_experiment_runner.py  benchmark_generator.py  config_parser.py  experiment_runner.py  openml_loader.py
docs/: index.md
docs/api/: callbacks.md  classifier.md  dgbf.md  dgbf_multioutput.md  metrics.md  multiclassifier.md  objectives.md  regressor.md  utils.md
docs/stylesheets/: extra.css
examples/: classifier.ipynb  quickstart.ipynb  regressor.ipynb  serialization.ipynb
src/deepgboost/: __init__.py  callback.py  core.py  deepgboost_classifier.py  deepgboost_multiclassifier.py  deepgboost_regressor.py  plotting.py  training.py
tests/: test_adaptive_layer_width.py  test_booster.py  test_callback.py  test_classifier.py  test_dgbf.py  test_metric.py  test_multiclassifier.py  test_objective.py  test_regressor.py  test_training.py
(+30 files in other folders)
