[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgboost"
version = "0.3.1"
description = "Distributed Gradient Boosting Forest — deep graph tree ensemble algorithm"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "nbmake>=1.5",
    "matplotlib>=3.7",
    "ruff>=0.15.8",
    "pre-commit>=4",
    "tqdm==4.67.3",
    "xgboost>=2.0",
]
benchmark = ["openml>=0.14"]
plotting = ["matplotlib>=3.7"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
    "pillow>=10.0",
    "cairosvg>=2.7",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["COM812"]
fixable = ["COM812"]
